# llm_forecasting

./: README.md  pyproject.toml
.devcontainer/vm/: Dockerfile  devcontainer.json
llm_forecasting/: alignment.py  data_scraping.py  ensemble.py  evaluation.py  information_retrieval.py  model_eval.py  ranking.py  summarize.py
llm_forecasting/config/: constants.py  keys.py  site_whitelist.py
llm_forecasting/prompts/: alignment.py  base_eval.py  base_reasoning.py  data_wrangling.py  ensemble_reasoning.py  prompts.py  relevance.py  search_query.py  summarization.py  system.py
llm_forecasting/utils/: api_utils.py  article_utils.py  data_utils.py  db_utils.py  logging_utils.py  metrics_utils.py  model_utils.py  string_utils.py  time_utils.py  utils.py  validation_utils.py  visualize_utils.py
notebooks/demo/: sample_q_base_output.html  sample_q_meta_output.html  sample_questions.pickle  system_demo.ipynb
notebooks/results/: results.ipynb
notebooks/results/data/: answers.pickle  base_predictions.pickle  crowd_predictions.pickle  finetuned_other_predictions.pickle  finetuned_predictions.pickle
scripts/data_scraping/: cset.py  gjopen.py  manifold.py  metaculus.py  polymarket.py
scripts/fine_tune/: fine_tune.py
scripts/training_data/: training_point_generation.py
